TRIMUI SMART Refined and added /proc/iomem information.

--- a/handheld/trimui-smart/iomem.htm
+++ b/handheld/trimui-smart/iomem.htm
@@ -45,26 +45,29 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>TRIMUI SMART</h3>
-<p><b>/proc/cpuinfo</b></p>
+<p><b>/proc/iomem</b></p>
 <hr size="1">
 <p>
 如下：
 </p>
 <pre>
-# cat cpuinfo
-    Processor       : ARMv7 Processor rev 5 (v7l)
-    BogoMIPS        : 6144.00
-    Features        : swp half thumb fastmult vfp edsp thumbee neon vfpv3 tls vfpv4 idiva idivt
-    CPU implementer : 0x41
-    CPU architecture: 7
-    CPU variant     : 0x0
-    CPU part        : 0xc07
-    CPU revision    : 5
-
-    Hardware        : sun8i
-    Revision        : 0000
-    Serial          : 84207911891c44390b50
-    Chipid          : 44390b507911891c8420462012c00003
+# cat iomem 
+    01c02000-01c024dc : sunxi_dmac
+    01c0f000-01c0ffff : sunxi-mmc
+    01c10000-01c10fff : sunxi-mmc
+    01c11000-01c11fff : sunxi-mmc
+    01c28000-01c283ff : uart
+    01c28400-01c287ff : uart
+    01c28800-01c28bff : uart
+    01c2b000-01c2b3ff : twi.1
+      01c2b000-01c2b3ff : twi.1
+    01c68000-01c68fff : spi.0
+      01c68000-01c68fff : spi
+    40000000-47ffffff : System RAM
+      40008000-40660fff : Kernel code
+      40686000-4072c1af : Kernel data
+    f1000000-f1200000 : de
+    f1c0c000-f1c0c3fc : lcd0
 </pre><br>
 
 <p>
