--- a/handheld.htm
+++ b/handheld.htm
@@ -4416,8 +4416,12 @@ UART腳位</a><br>
 改善LED太亮的問題</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/iomem.htm">
+/proc/iomem</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/cpuinfo.htm">
-CPU Info</a><br>
+/proc/cpuinfo</a><br>
 
 &lowast;
 <a href="handheld/miyoo/mksunxi.htm">
