TRIMUI SMART Refined and added kallsym information.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4424,6 +4424,10 @@ UART腳位</a><br>
 /proc/cpuinfo</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/kallsym.htm">
+/proc/kallsym</a><br>
+
+&lowast;
 <a href="handheld/miyoo/mksunxi.htm">
 mksunxi.c</a><br>
 
