--- a/handheld/trimui-smart/iomem.htm
+++ b/handheld/trimui-smart/iomem.htm
@@ -51,7 +51,7 @@
 如下：
 </p>
 <pre>
-# cat iomem 
+# cat /proc/iomem 
     01c02000-01c024dc : sunxi_dmac
     01c0f000-01c0ffff : sunxi-mmc
     01c10000-01c10fff : sunxi-mmc
