--- a/handheld/trimui-smart/cpuinfo.htm
+++ b/handheld/trimui-smart/cpuinfo.htm
@@ -51,7 +51,7 @@
 如下：
 </p>
 <pre>
-# cat cpuinfo
+# cat /proc/cpuinfo
     Processor       : ARMv7 Processor rev 5 (v7l)
     BogoMIPS        : 6144.00
     Features        : swp half thumb fastmult vfp edsp thumbee neon vfpv3 tls vfpv4 idiva idivt
