TRIMUI SMART How to turn LEDs off.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4412,6 +4412,10 @@ TRIMUI SMART</h3>
 UART腳位</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/ledoff.htm">
+如何關閉LED</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/led.htm">
 改善LED太亮的問題</a><br>
 
