TRIMUI SMART Refined.

--- a/handheld/trimui-smart/ledoff.htm
+++ b/handheld/trimui-smart/ledoff.htm
@@ -61,7 +61,8 @@
 <img src="ledoff/1.jpg" class="maxSize"><br><br>
 
 作用可以撐到下次開機～<br>
-<img src="ledoff/2.jpg" class="maxSize">
+<img src="ledoff/2.jpg" class="maxSize"><br>
+當然，最方便省事的作法就是在<b>/etc/main</b>最前面加上關閉LED的動作就可以
 </p>
 
 <p>
