TRIMUI SMART How to set cpu clock.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4469,6 +4469,10 @@ LCD Data Port Map</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/trimui-smart/asm_led.htm">
     LED</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/trimui-smart/asm_ccu.htm">
+    CCU</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
