TRIMUI SMART How to use uart2.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4473,6 +4473,10 @@ LCD Data Port Map</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/trimui-smart/asm_ccu.htm">
     CCU</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/trimui-smart/asm_uart.htm">
+    UART</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
