TRIMUI SMART Updated button maps.

--- a/handheld/trimui-smart/pinout.htm
+++ b/handheld/trimui-smart/pinout.htm
@@ -54,6 +54,19 @@
 <tr><td>LED (Red)</td><td>PG10</td></tr>
 <tr><td>LED (Blue)</td><td>PG11</td></tr>
 <tr><td>LED (Green)</td><td>PG12</td></tr>
+<tr><td>UP</td><td>PE0</td></tr>
+<tr><td>DOWN</td><td>PE1</td></tr>
+<tr><td>LEFT</td><td>PE3</td></tr>
+<tr><td>RIGHT</td><td>PE2</td></tr>
+<tr><td>A</td><td>PE5</td></tr>
+<tr><td>B</td><td>PE7</td></tr>
+<tr><td>X</td><td>PE4</td></tr>
+<tr><td>Y</td><td>PE6</td></tr>
+<tr><td>L</td><td>PE8</td></tr>
+<tr><td>R</td><td>PE9</td></tr>
+<tr><td>SELECT</td><td>PE12</td></tr>
+<tr><td>MENU</td><td>PE10</td></tr>
+<tr><td>START</td><td>PE11</td></tr>
 </table><br>
 
 <p>
