TRIMUI SMART Updated button maps.

--- a/handheld/trimui-smart/pinout.htm
+++ b/handheld/trimui-smart/pinout.htm
@@ -51,9 +51,6 @@
 腳位如下：
 </p>
 <table>
-<tr><td>LED (Red)</td><td>PG10</td></tr>
-<tr><td>LED (Blue)</td><td>PG11</td></tr>
-<tr><td>LED (Green)</td><td>PG12</td></tr>
 <tr><td>UP</td><td>PE0</td></tr>
 <tr><td>DOWN</td><td>PE1</td></tr>
 <tr><td>LEFT</td><td>PE3</td></tr>
@@ -67,6 +64,10 @@
 <tr><td>SELECT</td><td>PE12</td></tr>
 <tr><td>MENU</td><td>PE10</td></tr>
 <tr><td>START</td><td>PE11</td></tr>
+<tr><td>LED (Red)</td><td>PG10</td></tr>
+<tr><td>LED (Blue)</td><td>PG11</td></tr>
+<tr><td>LED (Green)</td><td>PG12</td></tr>
+<tr><td>LCD BL</td><td>PB4(PWM0)</td></tr>
 </table><br>
 
 <p>
