TRIMUI SMART Added partitions information.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4432,6 +4432,10 @@ UART腳位</a><br>
 /proc/kallsym</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/partitions.htm">
+/proc/partitions</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/dmesg.htm">
 dmesg</a><br>
 
