(ARM Cortex-A7) V3S (Lichee Pi Zero) Refined.

--- a/mcu/v3s/build_kernel-4.10.15.htm
+++ b/mcu/v3s/build_kernel-4.10.15.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <pre>
 $ cd
-$ git clone https://github.com/techping/linux/tree/licheepi-zero kernel
+$ git clone -b licheepi-zero https://github.com/techping/linux kernel
 $ cd kernel
 $ make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- sunxi_defconfig
 $ make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- zImage modules -j4
