TRIMUI SMART How to dump kernel from memory.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4463,6 +4463,10 @@ System Bus</a><br>
 <a href="handheld/trimui-smart/lcdmap.htm">
 LCD Data Port Map</a><br>
 
+&lowast;
+<a href="handheld/trimui-smart/dump.htm">
+dump kernel from memory</a><br>
+
 &oplus;
 <b>Assembly</b><br>
     
