TRIMUI SMART How to boot stock system from MicroSD.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4420,6 +4420,10 @@ UART腳位</a><br>
 改善LED太亮的問題</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/bootsd.htm">
+如何讓官方系統從MicroSD啟動</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/iomem.htm">
 /proc/iomem</a><br>
 
