TRIMUI SMART Refined.

--- a/handheld/trimui-smart/bootsd.htm
+++ b/handheld/trimui-smart/bootsd.htm
@@ -72,7 +72,7 @@ root@sun8i:/# df -h
     /dev/mmcblk0p1           14.0G    256.0M     13.6G   2% /mnt/UDISK
 </pre>
 <p>
-P.S. mmcblk0p1是ext4系統，可以自由擴展容量<br><br>
+P.S. mmcblk0p1預設是fat32系統，可以自由擴展容量<br><br>
 
 MicroSD、eMMC都可以被正確掛載，因此，當eMMC壞掉，使用者可以從MicroSD進行救援
 </p>
