--- a/handheld.htm
+++ b/handheld.htm
@@ -4424,6 +4424,10 @@ UART腳位</a><br>
 如何讓官方系統從MicroSD啟動</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/largefile.htm">
+解決無法讀取超過4GB檔案大小的問題</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/iomem.htm">
 /proc/iomem</a><br>
 
