TRIMUI SMART How to unbrick device.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4468,6 +4468,10 @@ Memory Map</a><br>
 System Bus</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/unbrick.htm">
+unbrick tool</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/lcdmap.htm">
 LCD Data Port Map</a><br>
 
