Wine How to draw chord.

--- a/program.htm
+++ b/program.htm
@@ -996,9 +996,9 @@ Wine</h3>
             <a href="program/wine/cpp_arc.htm">
             Draw Arc</a><br>
                     
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-                <a href="program/wine/cpp_dlg_chord.htm">
-                Chord</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/wine/cpp_chord.htm">
+            Draw Chord</a><br>
                     
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
                 <a href="program/wine/cpp_dlg_pie.htm">
