--- a/program/wine/cpp_chord.htm
+++ b/program/wine/cpp_chord.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Wine &gt;&gt; C/C++ &gt;&gt; Dialog &gt;&gt; Painting</h3>
-<p><b>Chord</b></p>
+<h3>Wine &gt;&gt; C/C++ &gt;&gt; Painting</h3>
+<p><b>Draw Chord</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -54,19 +54,24 @@
 3. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 4. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
-Chord使用方式如下：<br>
-<img src="cpp_dlg_chord/2.jpg" class="maxSize"><br><br>
+使用方式：<br>
+<img src="../nasm/win32_chord/1.jpg" class="maxSize"><br><br>
 
 main.c
 </p>
 <pre class="brush:cpp">
 #include &lt;windows.h&gt;
-
+ 
 HWND hWin = NULL;
 WNDPROC defWndProc = NULL;
-
+ 
 LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
 {
+    HDC hdc = NULL;
+    HPEN pen = NULL;
+    HBRUSH brush = NULL;
+    PAINTSTRUCT ps = {0};
+
     switch (uMsg) {
     case WM_CLOSE:
         DestroyWindow(hWnd);
@@ -75,10 +80,9 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
         PostQuitMessage(0);
         return 0;
     case WM_PAINT:
-        PAINTSTRUCT ps = {0};
-        HDC hdc = BeginPaint(hWnd, &amp;ps);
-        HPEN pen = CreatePen(PS_SOLID, 3, RGB(0xff, 0x00, 0x00));
-        HBRUSH brush = CreateSolidBrush(RGB(0x00, 0xff, 0x00));
+        hdc = BeginPaint(hWnd, &amp;ps);
+        pen = CreatePen(PS_SOLID, 3, RGB(0xff, 0x00, 0x00));
+        brush = CreateSolidBrush(RGB(0x00, 0xff, 0x00));
         SelectObject(hdc, pen);
         SelectObject(hdc, brush);
         Chord(hdc, 10, 10, 200, 200, 0, 0, 200, 100);
@@ -89,16 +93,13 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
     }
     return CallWindowProc(defWndProc, hWnd, uMsg, wParam, lParam);
 }
-
-int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
-                   LPSTR lpCmdLine, int nCmdShow)
+ 
+int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine, int nCmdShow)
 {
-    hWin = CreateWindow(WC_DIALOG, "main", WS_OVERLAPPEDWINDOW, 0, 0, 300, 300,
-                        NULL, NULL, NULL, NULL);
-    defWndProc =
-        (WNDPROC)SetWindowLongPtr(hWin, GWLP_WNDPROC, (long int)WndProc);
-    ShowWindow(hWin, SW_SHOW);
-
+    hWin = CreateWindow(WC_DIALOG, "main", 
+        WS_OVERLAPPEDWINDOW | WS_VISIBLE, 0, 0, 300, 300, NULL, NULL, NULL, NULL);
+    defWndProc = (WNDPROC)SetWindowLongPtr(hWin, GWLP_WNDPROC, (long int)WndProc);
+ 
     MSG msg = {0};
     while (GetMessage(&amp;msg, NULL, 0, 0)) {
         DispatchMessage(&amp;msg);
@@ -106,8 +107,10 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
     ExitProcess(0);
     return 0;
 }
-</pre><br>
+</pre>
 <p>
+<b>Line 26</b>：畫出一個Arc圖形<br><br>
+
 編譯、執行
 </p>
 <pre>
@@ -115,7 +118,7 @@ $ winegcc main.c -o main -lgdi32
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="cpp_dlg_chord/1.jpg" class="maxSize">
+<img src="../nasm/win32_chord/2.jpg" class="maxSize"><br><br>
 </p>
 
 <p>
