MinGW How to draw chord.

--- a/program.htm
+++ b/program.htm
@@ -1206,6 +1206,10 @@ MinGW</h3>
             <a href="program/mingw/cpp_arc.htm">
             Draw Arc</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/mingw/cpp_chord.htm">
+            Draw Chord</a><br>
+
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/mingw/enum_hid.htm">
         Enumerate USB HID</a><br>
