TRIMUI SMART How to use timer0 in polling mode.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4497,6 +4497,10 @@ dump kernel from memory</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/trimui-smart/asm_uart.htm">
     UART</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/trimui-smart/asm_timer0.htm">
+    Timer0 (Polling)</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
