--- a/program.htm
+++ b/program.htm
@@ -484,6 +484,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32_arc.htm">
             Draw Arc</a><br>
                     
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_chord.htm">
+            Draw Chord</a><br>
+                    
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
 
