NASMX How to draw arc.

--- a/program.htm
+++ b/program.htm
@@ -568,6 +568,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32x_polygon.htm">
             Draw Polygon</a><br>
                     
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32x_arc.htm">
+            Draw Arc</a><br>
+
 &oplus;
 <b>Assembly (x64)</b><br>
 
