TRIMUI SMART How to use timer1 in polling mode.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4501,6 +4501,10 @@ dump kernel from memory</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/trimui-smart/asm_timer0.htm">
     Timer0 (Polling)</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/trimui-smart/asm_timer1.htm">
+    Timer1 (Polling)</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
