--- a/handheld.htm
+++ b/handheld.htm
@@ -4505,6 +4505,10 @@ dump kernel from memory</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/trimui-smart/asm_timer1.htm">
     Timer1 (Polling)</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/trimui-smart/asm_timer2.htm">
+    Timer2 (Polling)</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
