MASM32 How to draw arc.

--- a/program.htm
+++ b/program.htm
@@ -689,6 +689,10 @@ Set ScrollBar</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/polygon.htm">
     Draw Polygon</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/arc.htm">
+    Draw Arc</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
