MASM32 How to draw chord.

--- a/program.htm
+++ b/program.htm
@@ -693,6 +693,10 @@ Set ScrollBar</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/arc.htm">
     Draw Arc</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/chord.htm">
+    Draw Chord</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
