--- a/program.htm
+++ b/program.htm
@@ -791,6 +791,10 @@ hello, world!</a><br>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/hla/win32_polygon.htm">
         Draw Polygon</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/hla/win32_arc.htm">
+        Draw Arc</a><br>
 &lowast;
 <a href="program/hla/fix_wc_dialog.htm">
 解決w.WC_DIALOG定義錯誤問題</a><br>
