Flat Assembler (FASM) How to draw arc.

--- a/program.htm
+++ b/program.htm
@@ -922,6 +922,10 @@ Flat Assembler (FASM)</h3>
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/fasm/win32_polygon.htm">
             Draw Polygon</a><br>
+            
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_arc.htm">
+            Draw Arc</a><br>
 <br><br><br><br>
 
 <div id="wine"></div>
