--- a/program.htm
+++ b/program.htm
@@ -926,6 +926,10 @@ Flat Assembler (FASM)</h3>
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/fasm/win32_arc.htm">
             Draw Arc</a><br>
+            
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_chord.htm">
+            Draw Chord</a><br>
 <br><br><br><br>
 
 <div id="wine"></div>
