TRIMUI SMART How to use watchdog.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4509,6 +4509,10 @@ dump kernel from memory</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/trimui-smart/asm_timer2.htm">
     Timer2 (Polling)</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/trimui-smart/asm_watchdog.htm">
+    Watchdog (Polling)</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
