TRIMUI SMART Refined.

--- a/handheld/trimui-smart/asm_timer1.htm
+++ b/handheld/trimui-smart/asm_timer1.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>TRIMUI SMART &gt;&gt; Assembly</h3>
-<p><b>Timer1 (Polling)</b></p>
+<p><b>Timer1</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
