--- a/handheld/trimui-smart/asm_timer0.htm
+++ b/handheld/trimui-smart/asm_timer0.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>TRIMUI SMART &gt;&gt; Assembly</h3>
-<p><b>Timer0 (Polling)</b></p>
+<p><b>Timer0</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
