Wine How to draw pie.

--- a/program.htm
+++ b/program.htm
@@ -1036,9 +1036,9 @@ Wine</h3>
             <a href="program/wine/cpp_chord.htm">
             Draw Chord</a><br>
                     
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-                <a href="program/wine/cpp_dlg_pie.htm">
-                Pie</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/wine/cpp_pie.htm">
+            Draw Pie</a><br>
                     
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
                 <a href="program/wine/cpp_dlg_font.htm">
