--- a/program/wine/cpp_ellipse.htm
+++ b/program/wine/cpp_ellipse.htm
@@ -74,6 +74,9 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
 
     switch (uMsg) {
     case WM_CLOSE:
+        DestroyWindow(hWnd);
+        return 0;
+    case WM_DESTROY:
         PostQuitMessage(0);
         return 0;
     case WM_PAINT:
@@ -106,7 +109,7 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine
 }
 </pre>
 <p>
-<b>Line 23</b>：畫出一個Ellipse圖形<br><br>
+<b>Line 26</b>：畫出一個Ellipse圖形<br><br>
 
 編譯、執行
 </p>
