--- a/program.htm
+++ b/program.htm
@@ -1246,6 +1246,10 @@ MinGW</h3>
             <a href="program/mingw/cpp_chord.htm">
             Draw Chord</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/mingw/cpp_pie.htm">
+            Draw Pie</a><br>
+
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/mingw/enum_hid.htm">
         Enumerate USB HID</a><br>
