NASM How to draw pie.

--- a/program.htm
+++ b/program.htm
@@ -488,6 +488,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32_chord.htm">
             Draw Chord</a><br>
                     
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_pie.htm">
+            Draw Pie</a><br>
+                    
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
 
