ARM Added gic table.

--- a/mcu.htm
+++ b/mcu.htm
@@ -1295,6 +1295,10 @@ ARM</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="mcu/arm/gic.htm">
+GIC</a><br>
+
+&lowast;
 <a href="mcu/arm/cond_cflag.htm">
 Carry Flag</a><br>
 
