--- a/mcu/arm/gic.htm
+++ b/mcu/arm/gic.htm
@@ -45,32 +45,15 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>ARM</h3>
-<p><b>Conditional Execution</b></p>
+<p><b>GIC</b></p>
 <hr size="1">
 <p>
 參考資料：<br>
-1. <a href="http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.dui0068b/Bcfihdhj.html">infocenter</a><br><br>
+1. <a href="https://developer.arm.com/documentation/ka002107/1-0">gic table</a><br><br>
 
-表格
+如下：<br>
+<img src="gic/1.jpg" class="maxSize">
 </p>
-<table>
-<tr><th>Suffix</th><th>Flags</th><th>Meaning</th><th>Example</th></tr>
-<tr><td>EQ</td><td>Z set</td><td>Equal</td><td>ldreq</td></tr>
-<tr><td>NE</td><td>Z clear</td><td>Not Equal</td><td>ldrne</td></tr>
-<tr><td>MI</td><td>N set</td><td>Negative</td><td>ldrmi</td></tr>
-<tr><td>PL</td><td>N clear</td><td>Positive or zero</td><td>ldrpl</td></tr>
-<tr><td>VS</td><td>V set</td><td>Overflow</td><td>ldrvs</td></tr>
-<tr><td>VC</td><td>V clear</td><td>No overflow</td><td>ldrvc</td></tr>
-<tr><td>HI</td><td>C set and Z clear</td><td>Higher (unsigned &gt;)</td><td>ldrhi</td></tr>
-<tr><td>CS/HS</td><td>C set</td><td>High or same (unsigned &gt;=)</td><td>ldrhs</td></tr>
-<tr><td>CC/LO</td><td>C clear</td><td>Lower (unsigned &lt;)</td><td>ldrlo</td></tr>
-<tr><td>LS</td><td>C clear and Z set</td><td>Lower or same(unsigned &lt;=)</td><td>ldrls</td></tr>
-<tr><td>GT</td><td>Z clear, and N and V the same</td><td>Signed &gt;</td><td>ldrgt</td></tr>
-<tr><td>GE</td><td>N and V the same</td><td>Signed &gt;=</td><td>ldrge</td></tr>
-<tr><td>LT</td><td>N and V different</td><td>Signed &lt;</td><td>ldrlt</td></tr>
-<tr><td>LE</td><td>Z set, or N and V different</td><td>Signed &lt;=</td><td>ldrle</td></tr>
-<tr><td>AL</td><td>Any</td><td>Always (usually omitted)</td><td>ldr</td></tr>
-</table><br>
 
 <p>
 <br><a href="../../mcu.htm">返回上一頁</a>
