TRIMUI SMART How to use gic in assembly.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4513,6 +4513,10 @@ dump kernel from memory</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/trimui-smart/asm_watchdog.htm">
     Watchdog</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/trimui-smart/asm_gic.htm">
+    GIC</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
