NASMX How to draw pie.

--- a/program.htm
+++ b/program.htm
@@ -580,6 +580,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32x_chord.htm">
             Draw Chord</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32x_pie.htm">
+            Draw Pie</a><br>
+
 &oplus;
 <b>Assembly (x64)</b><br>
 
