MASM32 How to draw pie.

--- a/program.htm
+++ b/program.htm
@@ -705,6 +705,10 @@ Set ScrollBar</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/chord.htm">
     Draw Chord</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/pie.htm">
+    Draw Pie</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
