FASM How to draw pie.

--- a/program.htm
+++ b/program.htm
@@ -946,6 +946,10 @@ Flat Assembler (FASM)</h3>
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/fasm/win32_chord.htm">
             Draw Chord</a><br>
+            
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_pie.htm">
+            Draw Pie</a><br>
 <br><br><br><br>
 
 <div id="wine"></div>
