SUPER MARY XY-8016 Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -207,6 +207,7 @@
     <a href="#onestation"><img src="img/photos/onestation.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="One Station"/></a>
     <a href="#mini-gamer"><img src="img/photos/mini-gamer.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Mini Retro Gamer"/></a>
     <a href="#x350"><img src="img/photos/x350.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="X350"/></a>
+    <a href="#xy-8016"><img src="img/photos/xy-8016.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SUPER MARY XY-8016"/></a>
 </p>
 </div>
 
@@ -6415,6 +6416,16 @@ X350</h3>
 &lowast;
 <a href="handheld/x350/dump_spi.htm">
 Dump SPI</a><br>
+<br><br><br><br>
+
+<div id="xy-8016"></div>
+<h3><img src="img/photos/xy-8016.jpg" class="floatLeft"/>
+SUPER MARY XY-8016</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/xy-8016/teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 </p>
