TRIMUI SMART How to use hstimer0.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4518,6 +4518,10 @@ dump kernel from memory</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/trimui-smart/asm_gic.htm">
     GIC</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/trimui-smart/asm_hstimer0.htm">
+    HS Timer0</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
