TRIMUI SMART How to use hstimer1.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4522,6 +4522,10 @@ dump kernel from memory</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/trimui-smart/asm_hstimer0.htm">
     HS Timer0</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/trimui-smart/asm_hstimer1.htm">
+    HS Timer1</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
