TRIMUI SMART How to replace new battery.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4409,6 +4409,10 @@ TRIMUI SMART</h3>
 可視角</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/battery.htm">
+更換電池</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/uart.htm">
 UART腳位</a><br>
 
