TRIMUI SMART How to use pwm0.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4530,6 +4530,10 @@ dump kernel from memory</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/trimui-smart/asm_hstimer1.htm">
     HS Timer1</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/trimui-smart/asm_pwm0.htm">
+    PWM0</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
