NASM How to create customized font.

--- a/program.htm
+++ b/program.htm
@@ -465,6 +465,10 @@ Netwide Assembler (NASM)</h3>
             Create Pen</a><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_font.htm">
+            Create Font</a><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/nasm/win32_line.htm">
             Draw Line</a><br>
 
