--- a/program/wine/cpp_font.htm
+++ b/program/wine/cpp_font.htm
@@ -54,7 +54,7 @@
 3. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 4. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
-在Windows視窗程式設計中，一般都是創造字型來使用，因為系統預設的字型太小，創造的字型除了可以粗體、斜體，還可以設定成長寬為不等比例顯示，司徒使用一個簡單例子來說明如何創造字型<br><br>
+在Windows視窗程式設計中，當需要文字輸出顯示在視窗上時，一般都會使用自定義的字型，因為系統預設的字型太小，而自定義的字型，除了可以是粗體或者斜體，還可以設定自定義的長寬尺寸，司徒使用一個簡單例子來說明如何建立自定義的字型<br><br>
 
 main.c
 </p>
