HW Added ref. information.

--- a/mcu/hw/pl2303sa.htm
+++ b/mcu/hw/pl2303sa.htm
@@ -48,6 +48,9 @@
 <p><b>USB轉UART(8隻腳位的PL2303)</b></p>
 <hr size="1">
 <p>
+參考資料：<br>
+1. <a href="https://www.electronics-lab.com/project/usb-to-serial-converter-using-pl2303sa/">usb-to-serial-converter-using-pl2303sa</a><br><br>
+
 腳位：<br>
 <img style="border:0px" src="pl2303sa/1.jpg" class="maxSize"><br><br>
 
