--- a/mcu/hw/usb_kbd_code.htm
+++ b/mcu/hw/usb_kbd_code.htm
@@ -48,6 +48,9 @@
 <p><b>Keyboard scancode</b></p>
 <hr size="1">
 <p>
+參考資料：<br>
+1. <a href="https://blog.kakaocdn.net/dn/ccrBEu/btrmgSgF8qG/y86yrBjjW6jzXbPP0KoGyK/USBKeyScan.pdf?attach=1&knm=tfile.dat">kakaocdn</a><br><br>
+
 如下：<br>
 <img src="usb_kbd_code/1.jpg" class="maxSize">
 </p>
