(FPGA) EPM240T100C5N Refined.

--- a/mcu.htm
+++ b/mcu.htm
@@ -140,7 +140,8 @@
     <a href="#rm08s"><img src="img/photos/rm08s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688 (HLK-RM08S)"/></a>
     <a href="#ubw32"><img src="img/photos/ubw32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS M4K) PIC32MX795 (UBW32)"/></a>
     <a href="#risc-v"><img src="img/photos/risc-v.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RISC-V"/></a>
-    <a href="#ox64"><img src="img/photos/ox64.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(T-Head C906 + T-Head E907) Ox64"/></a>
+    <a href="#m1s-dock"><img src="img/photos/m1s-dock.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(T-Head C906 + T-Head E907 + T-Head E902) BL808 (Sipeed M1s Dock)"/></a>
+    <a href="#ox64"><img src="img/photos/ox64.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(T-Head C906 + T-Head E907) BL808 (Ox64)"/></a>
     <a href="#d1-h"><img src="img/photos/d1-h.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) C906 (哪吒)"/></a>
     <a href="#f133"><img src="img/photos/f133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) F133 (MangoPi MQ-R)"/></a>
     <a href="#gd32vf103"><img src="img/photos/gd32vf103.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V) GD32VF103 (Sipeed Longan Nano)"/></a>
@@ -3324,6 +3325,12 @@ RISC-V</h3>
 &lowast;
 <a href="mcu/risc-v/reg.htm">
 Register</a><br>
+<br><br><br><br>
+
+<div id="m1s-dock"></div>
+<h3><img src="img/photos/m1s-dock.jpg" class="floatLeft"/>
+<b>(T-Head C906 + T-Head E907 + T-Head E902)</b> BL808 (Sipeed M1s Dock)</h3>
+<hr size="1"><br><br><br><br><br>
 <br><br><br><br>
 
 <div id="ox64"></div>
