--- a/mcu/epm240t100c5n/vhdl_btn.htm
+++ b/mcu/epm240t100c5n/vhdl_btn.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>EPM240T100C5N &gt;&gt; VHDL</h3>
+<h3>(FPGA) EPM240T100C5N &gt;&gt; VHDL</h3>
 <p><b>Button</b></p>
 <hr size="1">
 <p>
