(MCU 8051) STC15W104 Refined.

--- a/mcu/stc15w104/asm_w25q64.htm
+++ b/mcu/stc15w104/asm_w25q64.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>STC15W104 &gt;&gt; Assembly &gt;&gt; W25Q64</h3>
+<h3>(MCU 8051) STC15W104 &gt;&gt; Assembly &gt;&gt; W25Q64</h3>
 <p><b>Read JEDEC ID</b></p>
 <hr size="1">
 <p>
