--- a/mcu/stc15w104/asm_timer2.htm
+++ b/mcu/stc15w104/asm_timer2.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>STC15W104 &gt;&gt; Assembly</h3>
+<h3>(MCU 8051) STC15W104 &gt;&gt; Assembly</h3>
 <p><b>Timer2</b></p>
 <hr size="1">
 <p>
