--- a/mcu/stc15w104/inst.htm
+++ b/mcu/stc15w104/inst.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>STC15W104</h3>
+<h3>(MCU 8051) STC15W104</h3>
 <p><b>指令集</b></p>
 <hr size="1">
 <p>
