--- a/mcu/stc15w204s/asm_oled.htm
+++ b/mcu/stc15w204s/asm_oled.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>STC15W204S</h3>
+<h3>(MCU 8051) STC15W204S</h3>
 <p><b>0.96" OLED 128x64 SSD1306</b></p>
 <hr size="1">
 <p>
