--- a/mcu/stc15w204s/asm_png.htm
+++ b/mcu/stc15w204s/asm_png.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>STC15W204S</h3>
+<h3>(MCU 8051) STC15W204S</h3>
 <p><b>Show PNG</b></p>
 <hr size="1">
 <p>
@@ -87,10 +87,10 @@ $ vim run.py
       c = c + '0x'
     c = c + str(x)
 
-    if cnt >= 2:
+    if cnt &gt;= 2:
       cnt = 0 
       col = col + 1 
-      if col >= 32: 
+      if col &gt;= 32: 
         col = 0 
         print c
         c = 'db '
