Sipeed M1s Dock Added pinout image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -3331,6 +3331,10 @@ Register</a><br>
 <h3><img src="img/photos/m1s-dock.jpg" class="floatLeft"/>
 <b>(T-Head C906 + T-Head E907 + T-Head E902)</b> BL808 (Sipeed M1s Dock)</h3>
 <hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="mcu/m1s-dock/pinout.htm">
+接腳</a><br>
 <br><br><br><br>
 
 <div id="ox64"></div>
