Sipeed M1s Dock Added schematic images.

--- a/mcu.htm
+++ b/mcu.htm
@@ -3335,6 +3335,10 @@ Register</a><br>
 &lowast;
 <a href="mcu/m1s-dock/pinout.htm">
 接腳</a><br>
+
+&lowast;
+<a href="mcu/m1s-dock/sch.htm">
+電路圖</a><br>
 <br><br><br><br>
 
 <div id="ox64"></div>
