Sipeed M1s Dock Refined.

--- a/mcu.htm
+++ b/mcu.htm
@@ -140,7 +140,7 @@
     <a href="#rm08s"><img src="img/photos/rm08s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688 (HLK-RM08S)"/></a>
     <a href="#ubw32"><img src="img/photos/ubw32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS M4K) PIC32MX795 (UBW32)"/></a>
     <a href="#risc-v"><img src="img/photos/risc-v.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RISC-V"/></a>
-    <a href="#m1s-dock"><img src="img/photos/m1s-dock.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(T-Head C906 + T-Head E907 + T-Head E902) BL808 (Sipeed M1s Dock)"/></a>
+    <a href="#m1s-dock"><img src="img/photos/m1s-dock.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV64GCV + RV32GCP + RV32EMC) BL808 (Sipeed M1s Dock)"/></a>
     <a href="#ox64"><img src="img/photos/ox64.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(T-Head C906 + T-Head E907) BL808 (Ox64)"/></a>
     <a href="#d1-h"><img src="img/photos/d1-h.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) C906 (哪吒)"/></a>
     <a href="#f133"><img src="img/photos/f133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) F133 (MangoPi MQ-R)"/></a>
@@ -3329,7 +3329,7 @@ Register</a><br>
 
 <div id="m1s-dock"></div>
 <h3><img src="img/photos/m1s-dock.jpg" class="floatLeft"/>
-<b>(T-Head C906 + T-Head E907 + T-Head E902)</b> BL808 (Sipeed M1s Dock)</h3>
+<b>(RV64GCV + RV32GCP + RV32EMC)</b> BL808 (Sipeed M1s Dock)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
