--- a/mcu/m1s-dock/pinout.htm
+++ b/mcu/m1s-dock/pinout.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>(T-Head C906 + T-Head E907 + T-Head E902) BL808 (Sipeed M1s Dock)</h3>
+<h3>(RV64GCV + RV32GCP + RV32EMC) BL808 (Sipeed M1s Dock)</h3>
 <p><b>接腳</b></p>
 <hr size="1">
 <p>
