--- a/mcu/ox64/sch.htm
+++ b/mcu/ox64/sch.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>(T-Head C906 + T-Head E907) BL808 (Ox64)</h3>
+<h3>(RV64GCV + RV32GCP + RV32EMC) BL808 (Ox64)</h3>
 <p><b>電路圖</b></p>
 <hr size="1">
 <p>
