--- a/mcu/d1-h/pcb.htm
+++ b/mcu/d1-h/pcb.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>(RISC-V) C906 (哪吒)</h3>
+<h3>(RV64GCV) D1-H (哪吒)</h3>
 <p><b>開發板</b></p>
 <hr size="1">
 <p>
