--- a/mcu.htm
+++ b/mcu.htm
@@ -142,7 +142,7 @@
     <a href="#risc-v"><img src="img/photos/risc-v.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RISC-V"/></a>
     <a href="#m1s-dock"><img src="img/photos/m1s-dock.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV64GCV + RV32GCP + RV32EMC) BL808 (Sipeed M1s Dock)"/></a>
     <a href="#ox64"><img src="img/photos/ox64.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV64GCV + RV32GCP + RV32EMC) BL808 (Ox64)"/></a>
-    <a href="#d1-h"><img src="img/photos/d1-h.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) C906 (哪吒)"/></a>
+    <a href="#d1-h"><img src="img/photos/d1-h.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV64GCV) D1-H (哪吒)"/></a>
     <a href="#f133"><img src="img/photos/f133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) F133 (MangoPi MQ-R)"/></a>
     <a href="#gd32vf103"><img src="img/photos/gd32vf103.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V) GD32VF103 (Sipeed Longan Nano)"/></a>
     <a href="#k210"><img src="img/photos/k210.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V IMAFDC) K210 (Sipeed Maix Bit)"/></a>
@@ -3361,7 +3361,7 @@ Register</a><br>
 
 <div id="d1-h"></div>
 <h3><img src="img/photos/d1-h.jpg" class="floatLeft"/>
-<b>(T-Head C906)</b> D1-H (哪吒)</h3>
+<b>(RV64GCV)</b> D1-H (哪吒)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
