MangoPi MQ-R Refined.

--- a/mcu.htm
+++ b/mcu.htm
@@ -143,7 +143,7 @@
     <a href="#m1s-dock"><img src="img/photos/m1s-dock.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV64GCV + RV32GCP + RV32EMC) BL808 (Sipeed M1s Dock)"/></a>
     <a href="#ox64"><img src="img/photos/ox64.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV64GCV + RV32GCP + RV32EMC) BL808 (Ox64)"/></a>
     <a href="#d1-h"><img src="img/photos/d1-h.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV64GCV) D1-H (哪吒)"/></a>
-    <a href="#f133"><img src="img/photos/f133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) F133 (MangoPi MQ-R)"/></a>
+    <a href="#f133"><img src="img/photos/f133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV64GCV) F133 (MangoPi MQ-R)"/></a>
     <a href="#gd32vf103"><img src="img/photos/gd32vf103.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V) GD32VF103 (Sipeed Longan Nano)"/></a>
     <a href="#k210"><img src="img/photos/k210.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V IMAFDC) K210 (Sipeed Maix Bit)"/></a>
     <a href="#intel"><img src="img/photos/intel.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Intel"/></a>
@@ -3371,11 +3371,11 @@ Register</a><br>
 
 <div id="f133"></div>
 <h3><img src="img/photos/f133.jpg" class="floatLeft"/>
-<b>(T-Head C906)</b> F133-A (MangoPi MQ-R)</h3>
+<b>(RV64GCV)</b> F133 (MangoPi MQ-R)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
-<a href="mcu/f133-a/sch.htm">
+<a href="mcu/f133/sch.htm">
 電路圖</a><br>
 <br><br><br><br>
 
