--- a/mcu/f133/sch.htm
+++ b/mcu/f133/sch.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>(RISC-V) F133-A (MangoPi MQ-R)</h3>
+<h3>(RV64GCV) F133 (MangoPi MQ-R)</h3>
 <p><b>電路圖</b></p>
 <hr size="1">
 <p>
