--- a/mcu.htm
+++ b/mcu.htm
@@ -144,7 +144,7 @@
     <a href="#ox64"><img src="img/photos/ox64.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV64GCV + RV32GCP + RV32EMC) BL808 (Ox64)"/></a>
     <a href="#d1-h"><img src="img/photos/d1-h.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV64GCV) D1-H (哪吒)"/></a>
     <a href="#f133"><img src="img/photos/f133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV64GCV) F133 (MangoPi MQ-R)"/></a>
-    <a href="#gd32vf103"><img src="img/photos/gd32vf103.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V) GD32VF103 (Sipeed Longan Nano)"/></a>
+    <a href="#gd32vf103"><img src="img/photos/gd32vf103.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV32IMAC) GD32VF103 (Sipeed Longan Nano)"/></a>
     <a href="#k210"><img src="img/photos/k210.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V IMAFDC) K210 (Sipeed Maix Bit)"/></a>
     <a href="#intel"><img src="img/photos/intel.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Intel"/></a>
     <a href="#d2000"><img src="img/photos/d2000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(Intel Quark) D2000"/></a>
