--- a/mcu/gd32vf103/asm_btn.htm
+++ b/mcu/gd32vf103/asm_btn.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>(RISC-V) GD32VF103 (Sipeed Longan Nano) &gt;&gt; Assembly</h3>
+<h3>(RV32IMAC) GD32VF103 (Sipeed Longan Nano) &gt;&gt; Assembly</h3>
 <p><b>Button</b></p>
 <hr size="1">
 <p>
