Sipeed Maix Bit Refined.

--- a/mcu.htm
+++ b/mcu.htm
@@ -145,7 +145,7 @@
     <a href="#d1-h"><img src="img/photos/d1-h.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV64GCV) D1-H (哪吒)"/></a>
     <a href="#f133"><img src="img/photos/f133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV64GCV) F133 (MangoPi MQ-R)"/></a>
     <a href="#gd32vf103"><img src="img/photos/gd32vf103.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV32IMAC) GD32VF103 (Sipeed Longan Nano)"/></a>
-    <a href="#k210"><img src="img/photos/k210.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V IMAFDC) K210 (Sipeed Maix Bit)"/></a>
+    <a href="#k210"><img src="img/photos/k210.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RV64) K210 (Sipeed Maix Bit)"/></a>
     <a href="#intel"><img src="img/photos/intel.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Intel"/></a>
     <a href="#d2000"><img src="img/photos/d2000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(Intel Quark) D2000"/></a>
 </p>
@@ -3426,7 +3426,7 @@ Memory Map</a><br>
 
 <div id="k210"></div>
 <h3><img src="img/photos/k210.jpg" class="floatLeft"/>
-<b>(RISC-V IMAFDC)</b> K210 (Sipeed Maix Bit)</h3>
+<b>(RV64)</b> K210 (Sipeed Maix Bit)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
