--- a/mcu/k210/cpp_hello.htm
+++ b/mcu/k210/cpp_hello.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>(RISC-V IMAFDC) K210 (Sipeed Maix Bit) &gt;&gt; C/C++</h3>
+<h3>(RV64) K210 (Sipeed Maix Bit) &gt;&gt; C/C++</h3>
 <p><b>Hello, world!</b></p>
 <hr size="1">
 <p>
