--- a/mcu/k210/openocd_gdb.htm
+++ b/mcu/k210/openocd_gdb.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>(RISC-V IMAFDC) K210 (Sipeed Maix Bit)</h3>
+<h3>(RV64) K210 (Sipeed Maix Bit)</h3>
 <p><b>連接OpenOCD + GDB(SiPEED USB-JTAG/TTL)</b></p>
 <hr size="1">
 <p>
