--- a/handheld.htm
+++ b/handheld.htm
@@ -4425,6 +4425,10 @@ UART腳位</a><br>
 改善LED太亮的問題</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/lcd_reverse.htm">
+找出LCD腳位和初始化步驟</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/bootsd.htm">
 如何讓官方系統從MicroSD啟動</a><br>
 
